Still to fix edit reservation form
